[package]
name = "stargram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.17"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
uuid = "1.3.2"
