[package]
name = "stargram"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = { version = "0.6.17", features = ["multipart"] }
image = "0.24.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.3.2", features = ["v4"] }
