[package]
name = "stargram"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.6", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4"] }
